--- a/src/components/Form/_Form.scss
+++ b/src/components/Form/_Form.scss
@@ -123,12 +123,12 @@
     }
   
     &__button {
-      @include font-text(12px, 14px);
+      @include font-text-breakPoint(12px, 14px);
       margin: 10px 0 14px;
     }
   
     &__login {
-      @include font-text(12px, 15px);
+      @include font-text-breakPoint(12px, 15px);
     }
   }
 }
